# src/main/java/ru/java/device/service/restapi/controller/PetController.java
@@ -2,13 +2,12 @@ package ru.java.device.service.restapi.controller;
 
 import api.RestApi;
 import lombok.RequiredArgsConstructor;
-import model.Pet;
+import model.PetFindAllPaginRs;
+import model.PetFindAllRq;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-import ru.java.device.service.restapi.Exception.PetNotFoundException;
 import ru.java.device.service.restapi.service.PetService;
-
-import java.util.List;
+import model.PetRs;
 import java.util.UUID;
 
 @RestController
@@ -17,16 +16,12 @@ public class PetController implements RestApi {
     private final PetService petService;
 
     @Override
-    public ResponseEntity<List<Pet>> restApiV1PetsGet() {
-        return ResponseEntity.ok(petService.findAll());
+    public ResponseEntity<PetFindAllPaginRs> restApiV1PetsGet(PetFindAllRq petFindAllRq) {
+        return ResponseEntity.ok(petService.findAll(petFindAllRq));
     }
 
     @Override
-    public ResponseEntity<Pet> restApiV1PetsIdGet(UUID id) {
-        if (id.toString().equals("c596a2b3-b477-43c1-9396-774688b87ac2")) {
-            throw new PetNotFoundException(id);
-        }
-
-        return ResponseEntity.ok(petService.find());
+    public ResponseEntity<PetRs> restApiV1PetsIdGet(UUID id) {
+        return ResponseEntity.ok(petService.findById(id));
     }
 }
